<resources>
    <string name="app_name">Banco Online</string>
    <string name="lblMail">Correo Electronico</string>
    <string name="lblCuit">CUIT</string>
    <string name="lblMontoAInvertir">Monto a Invertir</string>
    <string name="lblDiasSeleccionados">Dias Seleccionados</string>
    <string name="lblDiasInversion">Cantidad de días de la inversión</string>
    <string name="lblRendimiento">Rendimiento</string>
    <string name="BtnHacerPlazoFijo">Hacer Plazo Fijo</string>
    <string name="CheckboxRenovacion">Renovación automática del plazo fijo</string>
    <string name="lblMoneda">Moneda</string>
    <string name="lblDolar">US$</string>
    <string name="lblPeso">ARS</string>
    <string name="lblAvisarVencimiento">Avisar por Mail antes del vencimiento</string>
    <string name="lblAceptarTerminos">Aceptar Terminos y Condiciones</string>
    <string name="lblHacerPF">Hacer Plazo Fijo</string>
    <string name="lblAccionVencimientoAcreditar">Acreditar en Cuenta</string>
    <string name="lblAccionVencimientoRenovar">Renovar</string>
</resources>
